--- a/.github/workflows/ROS-commit.yml
+++ b/.github/workflows/ROS-commit.yml
@@ -21,7 +21,7 @@ jobs:
           lfs: false
       - name: Run code_analysis.sh
         run: |
-          CI_TEST_OS=ros:noetic-ros-base-focal \
+          CI_TEST_OS=ros:humble-ros-base-jammy \
           ./continuous-integration/run_code_analysis_in_docker.sh
       - name: Notify Teams
         if: ${{ failure() && github.ref == 'refs/heads/master' }}
@@ -34,17 +34,29 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: ['ros:noetic-ros-base-focal']
+        os: ['ros:humble-ros-base-jammy', 'ros:iron-ros-core-jammy', 'ros:jazzy-ros-core-noble']
         compiler: ['g++', 'clang++']
         include:
-          - os: 'ros:noetic-ros-base-focal'
-            compiler: 'g++-10'
-          - os: 'ros:noetic-ros-base-focal'
-            compiler: 'g++-11'
-          - os: 'ros:noetic-ros-base-focal'
-            compiler: 'clang++-11'
-          - os: 'ros:noetic-ros-base-focal'
-            compiler: 'clang++-12'
+          - os: 'ros:humble-ros-base-jammy'
+            compiler: 'g++-12'
+          - os: 'ros:humble-ros-base-jammy'
+            compiler: 'g++-13'
+          - os: 'ros:humble-ros-base-jammy'
+            compiler: 'g++-14'
+          - os: 'ros:humble-ros-base-jammy'
+            compiler: 'clang++-15'
+          - os: 'ros:jazzy-ros-core-noble'
+            compiler: 'g++-14'
+          - os: 'ros:jazzy-ros-core-noble'
+            compiler: 'clang++-14'
+          - os: 'ros:jazzy-ros-core-noble'
+            compiler: 'clang++-15'
+          - os: 'ros:jazzy-ros-core-noble'
+            compiler: 'clang++-16'
+          - os: 'ros:jazzy-ros-core-noble'
+            compiler: 'clang++-17'
+          - os: 'ros:jazzy-ros-core-noble'
+            compiler: 'clang++-18'
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -68,7 +80,7 @@ jobs:
       fail-fast: true
       matrix:
         zivid-version: ['2.9.0+4dbba385-1', '2.10.0+8ce7dae3-2', '2.10.1+50b274e8-7', '2.11.0+95829246-1', '2.11.1+de9b5dae-1']
-        ros-distro: ['ros:noetic-ros-base-focal']
+        ros-distro: ['ros:humble-ros-base-jammy']
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -78,7 +90,7 @@ jobs:
         run: |
           CI_TEST_ZIVID_VERSION=${{ matrix.zivid-version }} \
           CI_TEST_OS=${{ matrix.ros-distro }} \
-          CI_TEST_COMPILER="g++-7" \
+          CI_TEST_COMPILER="g++" \
           CI_TEST_DOWNLOAD_TELICAM=1 \
           ./continuous-integration/run_build_and_test_in_docker.sh
       - name: Notify Teams
