Add Capture 2D sample

--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -22,6 +22,10 @@ add_executable(sample_capture_cpp src/sample_capture.cpp)
 ament_target_dependencies(sample_capture_cpp rclcpp zivid_interfaces sensor_msgs std_srvs ament_index_cpp)
 install(TARGETS sample_capture_cpp DESTINATION lib/${PROJECT_NAME})
 
+add_executable(sample_capture_2d_cpp src/sample_capture_2d.cpp)
+ament_target_dependencies(sample_capture_2d_cpp rclcpp zivid_interfaces sensor_msgs std_srvs ament_index_cpp)
+install(TARGETS sample_capture_2d_cpp DESTINATION lib/${PROJECT_NAME})
+
 if(BUILD_TESTING)
   # TODO enable linting of the samples
   #find_package(ament_lint_auto REQUIRED)
