Implement `load_settings_from_file` service and 2D variant

--- a/zivid_interfaces/CMakeLists.txt
+++ b/zivid_interfaces/CMakeLists.txt
@@ -12,6 +12,8 @@ rosidl_generate_interfaces(zivid_interfaces
                            "srv/CameraInfoModelName.srv"
                            "srv/CameraInfoSerialNumber.srv"
                            "srv/IsConnected.srv"
+                           "srv/LoadSettings2DFromFile.srv"
+                           "srv/LoadSettingsFromFile.srv"
                            DEPENDENCIES
                            builtin_interfaces)
 
