--- a/zivid_samples/package.xml
+++ b/zivid_samples/package.xml
@@ -19,6 +19,7 @@
   <depend>rosidl_default_generators</depend>
   <depend>zivid_interfaces</depend>
   <depend>ament_index_cpp</depend>
+  <exec_depend>rclpy</exec_depend>
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
