Make `sample_capture_with_settings_from_file` sample
Change `sample_capture` to capture from yaml settings

--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -34,6 +34,10 @@ add_executable(sample_capture_and_save_cpp src/sample_capture_and_save.cpp)
 ament_target_dependencies(sample_capture_and_save_cpp rclcpp zivid_interfaces)
 install(TARGETS sample_capture_and_save_cpp DESTINATION lib/${PROJECT_NAME})
 
+add_executable(sample_capture_with_settings_from_file_cpp src/sample_capture_with_settings_from_file.cpp)
+ament_target_dependencies(sample_capture_with_settings_from_file_cpp rclcpp zivid_interfaces sensor_msgs std_srvs ament_index_cpp)
+install(TARGETS sample_capture_with_settings_from_file_cpp DESTINATION lib/${PROJECT_NAME})
+
 install(PROGRAMS scripts/sample_capture.py DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
