Enable `zivid_samples` linting and fix resulting issues
Replace `ament_lint_common` with individual linters. Added each linter
from common except: `ament_cmake_copyright`.

The full list for `ament_lint_common` is found here:
https://github.com/ament/ament_lint/blob/master/ament_lint_common/package.xml

Add a `pyproject.toml` so that the Black formatting is compatible with
the `ament_flake8` linter.

--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -45,9 +45,8 @@ install(PROGRAMS scripts/sample_capture_assistant.py DESTINATION lib/${PROJECT_N
 install(PROGRAMS scripts/sample_capture_with_settings_from_file.py DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
-  # TODO enable linting of the samples
-  #find_package(ament_lint_auto REQUIRED)
-  #ament_lint_auto_find_test_dependencies()
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
 endif()
 
 install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
