--- a/zivid_samples/package.xml
+++ b/zivid_samples/package.xml
@@ -20,9 +20,16 @@
   <depend>zivid_interfaces</depend>
   <depend>ament_index_cpp</depend>
   <exec_depend>rclpy</exec_depend>
-  <test_depend>ament_cmake_gtest</test_depend>
+
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_cppcheck</test_depend>
+  <test_depend>ament_cmake_cpplint</test_depend>
+  <test_depend>ament_cmake_flake8</test_depend>
+  <test_depend>ament_cmake_lint_cmake</test_depend>
+  <test_depend>ament_cmake_pep257</test_depend>
+  <test_depend>ament_cmake_uncrustify</test_depend>
+  <test_depend>ament_cmake_xmllint</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
