CMake: Use functions to add samples

--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -11,6 +11,19 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+function(zivid_add_cpp_sample sample_name)
+  cmake_parse_arguments(PARSE_ARGV 1 ARG "" "" "DEPENDENCIES")
+  set(target_name "${sample_name}_cpp")
+
+  add_executable(${target_name} "src/${sample_name}.cpp")
+  ament_target_dependencies(${target_name} ${ARG_DEPENDENCIES})
+  install(TARGETS ${target_name} DESTINATION lib/${PROJECT_NAME})
+endfunction()
+
+function(zivid_add_python_sample sample_name)
+  install(PROGRAMS "scripts/${sample_name}.py" DESTINATION lib/${PROJECT_NAME})
+endfunction()
+
 find_package(ament_cmake REQUIRED)
 find_package(ament_index_cpp REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -18,31 +31,16 @@ find_package(zivid_interfaces REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 
-add_executable(sample_capture_cpp src/sample_capture.cpp)
-ament_target_dependencies(sample_capture_cpp rclcpp sensor_msgs std_srvs)
-install(TARGETS sample_capture_cpp DESTINATION lib/${PROJECT_NAME})
+zivid_add_cpp_sample(sample_capture DEPENDENCIES rclcpp sensor_msgs std_srvs)
+zivid_add_cpp_sample(sample_capture_2d DEPENDENCIES rclcpp sensor_msgs std_srvs)
+zivid_add_cpp_sample(sample_capture_and_save DEPENDENCIES rclcpp zivid_interfaces)
+zivid_add_cpp_sample(sample_capture_assistant DEPENDENCIES rclcpp zivid_interfaces sensor_msgs std_srvs)
+zivid_add_cpp_sample(sample_capture_with_settings_from_file DEPENDENCIES rclcpp sensor_msgs std_srvs ament_index_cpp)
 
-add_executable(sample_capture_2d_cpp src/sample_capture_2d.cpp)
-ament_target_dependencies(sample_capture_2d_cpp rclcpp sensor_msgs std_srvs)
-install(TARGETS sample_capture_2d_cpp DESTINATION lib/${PROJECT_NAME})
-
-add_executable(sample_capture_and_save_cpp src/sample_capture_and_save.cpp)
-ament_target_dependencies(sample_capture_and_save_cpp rclcpp zivid_interfaces)
-install(TARGETS sample_capture_and_save_cpp DESTINATION lib/${PROJECT_NAME})
-
-add_executable(sample_capture_assistant_cpp src/sample_capture_assistant.cpp)
-ament_target_dependencies(sample_capture_assistant_cpp rclcpp zivid_interfaces sensor_msgs std_srvs)
-install(TARGETS sample_capture_assistant_cpp DESTINATION lib/${PROJECT_NAME})
-
-add_executable(sample_capture_with_settings_from_file_cpp src/sample_capture_with_settings_from_file.cpp)
-ament_target_dependencies(sample_capture_with_settings_from_file_cpp rclcpp sensor_msgs std_srvs ament_index_cpp)
-install(TARGETS sample_capture_with_settings_from_file_cpp DESTINATION lib/${PROJECT_NAME})
-
-install(PROGRAMS scripts/sample_capture.py DESTINATION lib/${PROJECT_NAME})
-install(PROGRAMS scripts/sample_capture_2d.py DESTINATION lib/${PROJECT_NAME})
-install(PROGRAMS scripts/sample_capture_and_save.py DESTINATION lib/${PROJECT_NAME})
-install(PROGRAMS scripts/sample_capture_assistant.py DESTINATION lib/${PROJECT_NAME})
-install(PROGRAMS scripts/sample_capture_with_settings_from_file.py DESTINATION lib/${PROJECT_NAME})
+zivid_add_python_sample(sample_capture_2d)
+zivid_add_python_sample(sample_capture_and_save)
+zivid_add_python_sample(sample_capture_assistant)
+zivid_add_python_sample(sample_capture_with_settings_from_file)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
