ROS1 support for SDK 2.14.0
Please see top of README.md for information about limitations with
this branch.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -40,45 +40,45 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 
-set(SETTINGS_GENERATOR_TARGET_NAME ${PROJECT_NAME}_settings_generator)
-add_executable(${SETTINGS_GENERATOR_TARGET_NAME} src/settings_generator.cpp)
-target_include_directories(
-  ${SETTINGS_GENERATOR_TARGET_NAME}
-  SYSTEM PRIVATE
-  ${catkin_INCLUDE_DIRS}
-)
-target_link_libraries(${SETTINGS_GENERATOR_TARGET_NAME} PRIVATE Zivid::Core Boost::filesystem)
+#set(SETTINGS_GENERATOR_TARGET_NAME ${PROJECT_NAME}_settings_generator)
+#add_executable(${SETTINGS_GENERATOR_TARGET_NAME} src/settings_generator.cpp)
+#target_include_directories(
+#  ${SETTINGS_GENERATOR_TARGET_NAME}
+#  SYSTEM PRIVATE
+#  ${catkin_INCLUDE_DIRS}
+#)
+#target_link_libraries(${SETTINGS_GENERATOR_TARGET_NAME} PRIVATE Zivid::Core Boost::filesystem)
 
-set(GENERATOR_TARGET_NAME ${PROJECT_NAME}_generator)
-add_custom_target(
-  ${GENERATOR_TARGET_NAME}
-  COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/state_srv_files
-  COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/generated_headers
-  COMMAND ${SETTINGS_GENERATOR_TARGET_NAME}
-  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/SettingsAcquisition.cfg
-  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Settings.cfg
-  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Settings2DAcquisition.cfg
-  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Settings2D.cfg
-  BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/SettingsAcquisition.cfg
-             ${CMAKE_CURRENT_BINARY_DIR}/Settings.cfg
-             ${CMAKE_CURRENT_BINARY_DIR}/Settings2DAcquisition.cfg
-             ${CMAKE_CURRENT_BINARY_DIR}/Settings2D.cfg
-             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/SettingsAcquisitionConfigUtils.h
-             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/SettingsConfigUtils.h
-             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/Settings2DAcquisitionConfigUtils.h
-             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/Settings2DConfigUtils.h
-  COMMENT "Running generator"
-)
+#set(GENERATOR_TARGET_NAME ${PROJECT_NAME}_generator)
+#add_custom_target(
+#  ${GENERATOR_TARGET_NAME}
+#  COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/state_srv_files
+#  COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/generated_headers
+#  COMMAND ${SETTINGS_GENERATOR_TARGET_NAME}
+#  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/SettingsAcquisition.cfg
+#  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Settings.cfg
+#  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Settings2DAcquisition.cfg
+#  COMMAND chmod a+x ${CMAKE_CURRENT_BINARY_DIR}/Settings2D.cfg
+#  BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/SettingsAcquisition.cfg
+#             ${CMAKE_CURRENT_BINARY_DIR}/Settings.cfg
+#             ${CMAKE_CURRENT_BINARY_DIR}/Settings2DAcquisition.cfg
+#             ${CMAKE_CURRENT_BINARY_DIR}/Settings2D.cfg
+#             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/SettingsAcquisitionConfigUtils.h
+#             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/SettingsConfigUtils.h
+#             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/Settings2DAcquisitionConfigUtils.h
+#             ${CMAKE_CURRENT_BINARY_DIR}/generated_headers/Settings2DConfigUtils.h
+#  COMMENT "Running generator"
+#)
 
 set(LIBRARY_NAME ${PROJECT_NAME})
 
-generate_dynamic_reconfigure_options(
-  ${CMAKE_CURRENT_BINARY_DIR}/Settings.cfg
-  ${CMAKE_CURRENT_BINARY_DIR}/SettingsAcquisition.cfg
-  ${CMAKE_CURRENT_BINARY_DIR}/Settings2D.cfg
-  ${CMAKE_CURRENT_BINARY_DIR}/Settings2DAcquisition.cfg
-)
-add_dependencies(${PROJECT_NAME}_gencfg ${GENERATOR_TARGET_NAME})
+#generate_dynamic_reconfigure_options(
+#  ${CMAKE_CURRENT_BINARY_DIR}/Settings.cfg
+#  ${CMAKE_CURRENT_BINARY_DIR}/SettingsAcquisition.cfg
+#  ${CMAKE_CURRENT_BINARY_DIR}/Settings2D.cfg
+#  ${CMAKE_CURRENT_BINARY_DIR}/Settings2DAcquisition.cfg
+#)
+#add_dependencies(${PROJECT_NAME}_gencfg ${GENERATOR_TARGET_NAME})
 add_service_files(
   DIRECTORY
   srv
@@ -113,7 +113,7 @@ set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES 
 add_library(
   ${LIBRARY_NAME}
   src/zivid_camera.cpp
-  src/capture_settings_controller.cpp
+  #src/capture_settings_controller.cpp
 )
 turn_on_compiler_warnings_if_enabled(${LIBRARY_NAME})
 target_include_directories(
@@ -137,7 +137,7 @@ target_link_libraries(${LIBRARY_NAME} PUBLIC ${catkin_LIBRARIES})
 target_link_libraries(${LIBRARY_NAME} PRIVATE Zivid::Core)
 add_dependencies(
   ${LIBRARY_NAME}
-  ${PROJECT_NAME}_gencfg
+  #${PROJECT_NAME}_gencfg
   ${catkin_EXPORTED_TARGETS}
   ${PROJECT_NAME}_generate_messages_cpp
 )
