Implement infield correction
Add support for infield correction in the zivid_camera ROS driver.
Please see the readme for usage instructions.

This commit also adds a new sample to demonstrate the new functionality.

Additionally, an RViz panel is added for interactive infield correction,
with the new `zivid_rviz_plugin` package.

New tests are added. A new file camera from the Zivid sample data is
used to test the new feature with a calibration board.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -35,6 +35,8 @@ set(ZIVID_DRIVER_COMPONENT_NAME ${PROJECT_NAME}_component)
 add_library(
   ${ZIVID_DRIVER_COMPONENT_NAME}
   SHARED
+  src/controller_interface.cpp
+  src/infield_correction_controller.cpp
   src/zivid_camera.cpp
 )
 
@@ -98,7 +100,11 @@ if(BUILD_TESTING)
   find_package(ament_cmake_gtest REQUIRED)
   set(TEST_TARGET_NAME ${PROJECT_NAME}_test)
 
-  ament_add_gtest(${TEST_TARGET_NAME} test/test_zivid_camera.cpp TIMEOUT 480)
+  ament_add_gtest(${TEST_TARGET_NAME}
+      test/test_zivid_camera.cpp
+      test/test_infield_correction.cpp
+      TIMEOUT 1000
+  )
   ament_target_dependencies(${TEST_TARGET_NAME}
       rclcpp
       std_msgs
