--- a/zivid_interfaces/CMakeLists.txt
+++ b/zivid_interfaces/CMakeLists.txt
@@ -5,15 +5,20 @@ project(zivid_interfaces)
 find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 rosidl_generate_interfaces(zivid_interfaces
                            "srv/CaptureAndSave.srv"
                            "srv/CaptureAssistantSuggestSettings.srv"
                            "srv/CameraInfoModelName.srv"
                            "srv/CameraInfoSerialNumber.srv"
+                           "srv/InfieldCorrectionCapture.srv"
+                           "srv/InfieldCorrectionCompute.srv"
+                           "srv/InfieldCorrectionRead.srv"
                            "srv/IsConnected.srv"
                            DEPENDENCIES
-                           builtin_interfaces)
+                           builtin_interfaces
+                           geometry_msgs)
 
 ament_export_dependencies(rosidl_default_runtime)
 ament_package()
