--- a/zivid_camera/package.xml
+++ b/zivid_camera/package.xml
@@ -18,6 +18,9 @@
   <depend>image_transport</depend>
   <depend>builtin_interfaces</depend>
   <depend>zivid_interfaces</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <exec_depend>ros2launch</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
