--- a/zivid_samples/package.xml
+++ b/zivid_samples/package.xml
@@ -18,6 +18,9 @@
   <depend>builtin_interfaces</depend>
   <depend>zivid_interfaces</depend>
   <depend>ament_index_cpp</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <exec_depend>rclpy</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
