Implement detection for calibration board and fiducial markers
Two new services are added to zivid_camera, one to detect a calibration
board, and another to detect fiducial markers. Their poses and features
are returned. Please see the readme for details.

Two new samples are added to illustrate the use of the new services.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(
   src/controller_interface.cpp
   src/hand_eye_calibration_controller.cpp
   src/infield_correction_controller.cpp
+  src/detector_controller.cpp
   src/utility.cpp
   src/zivid_camera.cpp
 )
@@ -110,6 +111,7 @@ if(BUILD_TESTING)
 
   ament_add_gtest(${TEST_TARGET_NAME}
       test/test_zivid_camera.cpp
+      test/test_detector.cpp
       test/test_hand_eye_calibration.cpp
       test/test_infield_correction.cpp
       TIMEOUT 1000
