--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -39,6 +39,8 @@ zivid_add_cpp_sample(sample_capture_2d DEPENDENCIES rclcpp sensor_msgs std_srvs)
 zivid_add_cpp_sample(sample_capture_and_save DEPENDENCIES rclcpp zivid_interfaces)
 zivid_add_cpp_sample(sample_capture_assistant DEPENDENCIES rclcpp zivid_interfaces sensor_msgs std_srvs)
 zivid_add_cpp_sample(sample_capture_with_settings_from_file DEPENDENCIES rclcpp sensor_msgs std_srvs ament_index_cpp)
+zivid_add_cpp_sample(sample_capture_and_detect_calibration_board DEPENDENCIES rclcpp zivid_interfaces)
+zivid_add_cpp_sample(sample_capture_and_detect_markers DEPENDENCIES rclcpp zivid_interfaces)
 zivid_add_cpp_sample(sample_infield_correction DEPENDENCIES rclcpp std_srvs zivid_interfaces)
 zivid_add_cpp_sample(sample_hand_eye_calibration DEPENDENCIES rclcpp std_srvs zivid_interfaces tf2 tf2_ros tf2_geometry_msgs)
 
