Add projection support
The Zivid SDK offers an API for interacting with its projector. This
commit adds equivalent support to the official ROS2 driver.

Since an actual camera is not available the testing is far from
complete, but some basic smoke testing is done.

--- a/zivid_camera/CMakeLists.txt
+++ b/zivid_camera/CMakeLists.txt
@@ -42,6 +42,7 @@ add_library(
   src/hand_eye_calibration_controller.cpp
   src/infield_correction_controller.cpp
   src/detector_controller.cpp
+  src/projection_controller.cpp
   src/utility.cpp
   src/zivid_camera.cpp
 )
