--- a/zivid_interfaces/CMakeLists.txt
+++ b/zivid_interfaces/CMakeLists.txt
@@ -30,6 +30,9 @@ rosidl_generate_interfaces(zivid_interfaces
                            "srv/InfieldCorrectionCompute.srv"
                            "srv/InfieldCorrectionRead.srv"
                            "srv/IsConnected.srv"
+                           "srv/ProjectionResolution.srv"
+                           "srv/ProjectionStart.srv"
+                           "srv/ProjectionStatus.srv"
                            DEPENDENCIES
                            builtin_interfaces
                            geometry_msgs)
