Add sample showing how to use the Zivid SDK directly
See readme for details.

--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -12,11 +12,12 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 function(zivid_add_cpp_sample sample_name)
-  cmake_parse_arguments(PARSE_ARGV 1 ARG "" "" "DEPENDENCIES")
+  cmake_parse_arguments(PARSE_ARGV 1 ARG "" "" "DEPENDENCIES;LINK_TARGETS")
   set(target_name "${sample_name}_cpp")
 
   add_executable(${target_name} "src/${sample_name}.cpp")
   ament_target_dependencies(${target_name} ${ARG_DEPENDENCIES})
+  target_link_libraries(${target_name} ${ARG_LINK_TARGETS})
   install(TARGETS ${target_name} DESTINATION lib/${PROJECT_NAME})
 endfunction()
 
@@ -34,6 +35,9 @@ find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 
+find_package(Zivid 2.15.0 COMPONENTS Core REQUIRED)
+message(STATUS "Found Zivid SDK version ${Zivid_VERSION}")
+
 zivid_add_cpp_sample(sample_capture DEPENDENCIES rclcpp sensor_msgs std_srvs)
 zivid_add_cpp_sample(sample_capture_2d DEPENDENCIES rclcpp sensor_msgs std_srvs)
 zivid_add_cpp_sample(sample_capture_and_save DEPENDENCIES rclcpp zivid_interfaces)
@@ -44,6 +48,13 @@ zivid_add_cpp_sample(sample_capture_and_detect_markers DEPENDENCIES rclcpp zivid
 zivid_add_cpp_sample(sample_hand_eye_calibration DEPENDENCIES rclcpp std_srvs zivid_interfaces tf2 tf2_ros tf2_geometry_msgs)
 zivid_add_cpp_sample(sample_infield_correction DEPENDENCIES rclcpp std_srvs zivid_interfaces)
 zivid_add_cpp_sample(sample_intrinsics DEPENDENCIES rclcpp sensor_msgs std_srvs)
+
+zivid_add_cpp_sample(sample_with_sdk_capture_and_load_frame
+  DEPENDENCIES
+    rclcpp sensor_msgs std_srvs zivid_interfaces tf2 tf2_ros tf2_geometry_msgs
+  LINK_TARGETS
+    Zivid::Core
+)
 
 zivid_add_python_sample(sample_capture)
 zivid_add_python_sample(sample_capture_2d)
