--- a/zivid_samples/CMakeLists.txt
+++ b/zivid_samples/CMakeLists.txt
@@ -47,6 +47,7 @@ endfunction()
 #register_cpp_sample(NAME sample_capture_2d_cpp SRC src/sample_capture_2d.cpp)
 register_cpp_sample(NAME sample_capture_assistant_cpp SRC src/sample_capture_assistant.cpp)
 register_cpp_sample(NAME sample_capture_with_settings_from_yml_cpp SRC src/sample_capture_with_settings_from_yml.cpp)
+register_cpp_sample(NAME sample_intrinsics_cpp SRC src/sample_intrinsics.cpp)
 
 ####################
 ## Python Samples ##
@@ -71,6 +72,7 @@ endfunction()
 #register_python_sample(SRC scripts/sample_capture_2d.py)
 register_python_sample(SRC scripts/sample_capture_assistant.py)
 register_python_sample(SRC scripts/sample_capture_with_settings_from_yml.py)
+register_python_sample(SRC scripts/sample_intrinsics.py)
 
 ####################
 ## Launch scripts ##
